--- a/index.html
+++ b/index.html
@@ -6,9 +6,40 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ejercicio Guiado BEM</title>
 	<!-- Link archivo css-->
-	
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="style">
 </head>
 <body>
+	<header>
+		<ul class="a-menu">
+			<li class="a-menu_item"><a class="a-menu_item_link" href="#">BLOG</a></li>
+		     <li class="a-menu_item"><a class="a-menu_item_link" href="#">ABOUT</a></li>
+			  <li class="a-menu_item"> <a class="a-menu_item_link" href="#">CONTACTO</a></li>
+	    </ul>
+	</header>
+				<section>
+					<div class="article">
+						<h2 class="article_title">Mermeladas</h2>
+						<p class="article_desc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<img class="article_img" src="img/mermeladas pirque.jpg" alt="">
+					</div>
 
-</body>
-</html>
+					<div class="article article--green">
+						<h2 class="article_title">Comida Saludable</h2>
+						<p class="article_desc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<img class="article_img" src="img/mermeladas pirque.jpg" alt="">
+					</div>
+
+					<div class="article article--green">
+						<h2 class="article_title">Los beneficios de la miel</h2>
+						<p class="article_desc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<img class="article_img" src="img/mermeladas pirque.jpg" alt="">
+					</div>
+				</section>
+				<footer class="pie">
+					<p class="pie_item--center">
+						Create by Someone
+					</p>						
+				</footer>
+			</body>
+			</html>
